; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_display_network_error.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/winfile/extr_winefile.c_display_network_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BUFFER_LEN = common dso_local global i32 0, align 4
@NO_ERROR = common dso_local global i64 0, align 8
@IDS_WINEFILE = common dso_local global i32 0, align 4
@MB_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @display_network_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @display_network_error(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %8 = load i32, i32* @BUFFER_LEN, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %3, align 8
  %11 = alloca i32, i64 %9, align 16
  store i64 %9, i64* %4, align 8
  %12 = load i32, i32* @BUFFER_LEN, align 4
  %13 = zext i32 %12 to i64
  %14 = alloca i32, i64 %13, align 16
  store i64 %13, i64* %5, align 8
  %15 = load i32, i32* @BUFFER_LEN, align 4
  %16 = zext i32 %15 to i64
  %17 = alloca i32, i64 %16, align 16
  store i64 %16, i64* %6, align 8
  %18 = load i32, i32* @BUFFER_LEN, align 4
  %19 = load i32, i32* @BUFFER_LEN, align 4
  %20 = call i64 @WNetGetLastErrorW(i32* %7, i32* %11, i32 %18, i32* %14, i32 %19)
  %21 = load i64, i64* @NO_ERROR, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %1
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @IDS_WINEFILE, align 4
  %26 = call i32 @RS(i32* %17, i32 %25)
  %27 = load i32, i32* @MB_OK, align 4
  %28 = call i32 @MessageBoxW(i32 %24, i32* %11, i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %23, %1
  %30 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %30)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @WNetGetLastErrorW(i32*, i32*, i32, i32*, i32) #2

declare dso_local i32 @MessageBoxW(i32, i32*, i32, i32) #2

declare dso_local i32 @RS(i32*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
